# drf-auth

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
drf_auth/: settings.py  urls.py
snacks/: models.py  permissions.py  serializers.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
